# Deploy-RAG-On-AWS

./: .gitignore  README.md  main.py  populate_database.py  pyproject.toml  requirements.txt
image/: Dockerfile  populate_database.py  requirements.txt
image/src/: app_api_handler.py
image/src/rag_app/: get_chroma_db.py  get_embedding_function.py  query_rag.py
infra/: app.py  cdk.json  pyproject.toml
infra/stacks/: rag_stack.py
src/: app_api_handler.py
src/rag_app/: get_chroma_db.py  query_rag.py
