[project]
name = "deploy-rag-on-aws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "boto3==1.34.117",
    "awscrt==0.20.9",
    "botocore[crt]==1.34.117",
    "fastapi==0.111.0",
    "mangum==0.17.0",
    "uvicorn==0.30.0",
    "pypdf==4.2.0",
    "numpy==1.26.4",
    "chromadb==0.5.3",
    "onnxruntime==1.21.0",
    "langchain==0.2.1",
    "langchain-aws==0.1.6",
    "langchain-community==0.2.1",
    "langchain-text-splitters==0.2.1",
    "langchain-core==0.2.3",
]
